using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class AnimationParams
{
	public readonly static string FLOAT_HORIZONTAL_MOTION_NAME_PARAM = "Horizontal";

	public readonly static string FLOAT_VERTICAL_MOTION_NAME_PARAM = "Vertical";

	public readonly static string BOOL_RUN_NAME_PARAM = "IsRun";

	public readonly static string BOOL_MELEE_WEAPON_NAME_PARAM = "IsMeleeWeapon";

	public readonly static string BOOL_GUN_WEAPON_NAME_PARAM = "IsGunWeapon";

	public readonly static string BOOL_HEAVY_WEAPON_NAME_PARAM = "IsHeavyWeapon";

	public readonly static string BOOL_ATTACK_MODE_NAME_PARAM = "IsAttackMode";
}
